# shared/src/commonMain/kotlin/com/sekota/features/auth/domain/model/AuthRequest.kt
@@ -4,6 +4,15 @@ import kotlinx.serialization.Serializable
 
 @Serializable
 data class AuthRequest(
-    val username: String,
-    val password: String
+    val email: String,
+    val password: String,
+    val role: String? = "READER",
+    val profile: String? = null,
+    val phoneNumber: String? = null,
+    val socialMedia: String? = null,
+    val telegram: String? = null,
+    val instagram: String? = null,
+    val linkedin: String? = null,
+    val xTwitter: String? = null,
+    val facebook: String? = null
 )
